--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
     <p id="description">Thank you for taking the time to help us improve the platform</p>
     <div>
         <form action="" id="survey-form">
-            <label for="name" id="name-lable">Name</label>
+            <label for="name" id="name-label">Name</label>
             <br>
             <input type="text" id="name" name="name" placeholder="Enter your name" required>
             <br>
-            <label for="email" id="email-lable">Email</label>
+            <label for="email" id="email-label">Email</label>
             <br>
             <input type="email" id="email" name="email" placeholder="Enter your email" required>
             <br>
-            <label for="number" id="number-lable">Age (optional)</label>
+            <label for="number" id="number-label">Age (optional)</label>
             <br>
             <input type="number" id="number" name="number" placeholder="Age" min="10" max="100">
             <br>
@@ -38,13 +38,13 @@
                 <option value="Other">Other</option>
             </select>
             <p>Would you recommend freeCodeCamp to a friend?</p>
-            <input type="radio" name="Definitely" value="Definitely" checked>
+            <input type="radio" name="radio-btn" value="Definitely" checked>
             <label for="Definitely">Definitely</label>
             <br>
-            <input type="radio" name="Maybe" value="Maybe">
+            <input type="radio" name="radio-btn" value="Maybe">
             <label for="Maybe">Maybe</label>
             <br>
-            <input type="radio" name="Not sure" value="Not sure">
+            <input type="radio" name="radio-btn" value="Not sure">
             <label for="Not sure">Not sure</label>
             <br>
             <p>What is your favorite feature of freeCodeCamp?</p>
